--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Dimas Apriliansyah",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.5.3",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "nodemon": "^1.19.1"
